--- a/Fuggos Post World/client/src/App.css
+++ b/Fuggos Post World/client/src/App.css
@@ -91,7 +91,7 @@ input[type=text]:focus{
 a{ color: black}
 a:link{ text-decoration: none}
 .postHolder {
-    border-style: solid;
+    border-style: groove;
     background-color: lightblue;
     margin-left: 20px;
     margin-bottom: 10px;
@@ -104,6 +104,7 @@ a:link{ text-decoration: none}
     max-height: 500px;
 
     overflow-x: auto;
+
 }
 
 .postHeader {
@@ -113,7 +114,7 @@ a:link{ text-decoration: none}
 }
 
 .postFooter {
-    background-color: darkgray;
+    width: 100%;
     display: flex;
     margin:auto;
 }
@@ -184,14 +185,15 @@ a:link{ text-decoration: none}
     box-shadow: 10px 5px 5px darkslategrey;
     margin-top: 5px;
     margin-bottom: 5px;
+    max-width: 95%;
+    justify-content: space-between;
     width: fit-content;
     border-style: solid;
     border-width: 2px;
     margin-left: 20px;
     padding: 10px;
-    height: 10%;
+    max-height: fit-content;
     background-color: lightblue;
-
 }
 
 .enemyPostHeader {
@@ -216,6 +218,10 @@ a:link{ text-decoration: none}
     padding: 5px;
     text-align: left;
     font-size: 14px;
+    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: inherit;
 }
 
 .originalPoster {
@@ -422,8 +428,24 @@ pre{
     bottom:0;
     height:30px;
     width:3%;
+
 }
 
 .searchIcon {
     margin: 20px
+}
+
+.floatingReplies {
+    padding: 5px;
+    margin: auto;
+    width: 100%;
+    float: left;
+justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: lightgreen;
+    max-height: 65px;
+    overflow: hidden;
+
 }
